# hla-omdt-parser

./: Foo.hs  Test  Test.hs  hla-omdt-parser.cabal  omd-object.y  omd.x  omd.y
depracted/ObjectParser/: Stage2.hs
src/Text/: OMDT.hs
src/Text/OMDT/: Lexer.hs  ObjectParser.hs  Parser.hs  Syntax.hs
src/Text/OMDT/Parser/: Prim.hs
src/Text/OMDT/Syntax/: Labels.hs
