name:                   hla-omdt-parser
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
license:                PublicDomain
homepage:               /dev/null

category:               Text
synopsis:               Data structure and parser for HLA OMDT data files.
description:            Data structure and parser for HLA OMDT data files.

Library
  hs-source-dirs:       src
  exposed-modules:      Text.OMDT
  other-modules:        Text.OMDT.Lexer
                        Text.OMDT.Parser
                        Text.OMDT.Parser.Prim
                        Text.OMDT.Syntax
                        Text.OMDT.Syntax.Labels
  build-depends:        base >= 3 && <5, array, containers, fclabels, parsec == 3.*, th-lift, time
