name:                   hla-omdt-parser
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Text
synopsis:               Data structure and parser for HLA OMDT data files.
description:            Data structure and parser for HLA OMDT data files.

source-repository head
  type: git
  location: git://github.com/mokus0/hla-omdt-parser.git

Library
  hs-source-dirs:       src
  exposed-modules:      Text.OMDT
  other-modules:        Text.OMDT.Lexer
                        Text.OMDT.Parser
                        Text.OMDT.Parser.Prim
                        Text.OMDT.Syntax
                        Text.OMDT.Syntax.Labels
  build-depends:        base >= 3 && <5, array, containers, fclabels, parsec == 3.*, th-lift, time
